--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <script src="scripts/main.js"></script>
+    <script data-main="/scripts/main" src="/scripts/vendor/bower/requirejs/require.js"></script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>hi</title>
