debug, trying, comments

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,8 @@
 <body>
 <h1>hi</h1>
 <p>Test for P2P WebRTC videochat, check js console</p>
-<video autoplay="autoplay"></video>
+<h2>This shows your webcam</h2>
+<video id="me" autoplay="autoplay"></video>
+<h2>This shows your partner's webcam</h2>
+<video id="hi" autoplay="autoplay"></video>
 </body>
